---
config:
    theme: neutral
    layout: elk
    defaultRenderer: elk
    elk:
        nodePlacementStrategy: NETWORK_SIMPLEX
---

classDiagram
    Entity ..|> Renderable~T~: #60;#60;binds#62;#62; #60;T -> SpriteBatch#62;
    Entity --o EntityManager: aggregates
    Entity ..|> Moveable
    EntityManager --* Scene
    Cuboid --|> Polyhedron
    Polyhedron ..|> GJKTarget
    ColliderMesh --|> Moveable
    Polyhedron ..> CollisionManager: Uses
    CollisionManager ..> GJKTarget: Uses
    GraphicsManager --o SceneManager
    ResourceCache~K&comma; V: Disposable~ ..|> Disposable
    Scene --o SceneManager: aggregates
    TextureManager --|> ResourceCache: #60;#60;bind#62;#62; #60;K -> String, V -> Texture#62;
    TextureManager --* Scene
    MouseManager ..> MouseMoveEvent: Creates
    SoundManager --|> ResourceCache: #60;#60;bind#62;#62; #60;K -> String, V -> Sound#62;
    SoundManager --* Scene
    KeyboardManager --|> InputAdapter
    KeyboardManager ..> KeyEvent: Creates
    KeyboardManager --* ButtonManager~T~: #60;#60;binds#62;#62; #60;T -> KeyEvent#62;
    KeyEvent --* ButtonBindType
    MouseButtonEvent --* ButtonBindType
    MouseManager --* ButtonManager~T~: #60;#60;binds#62;#62; #60;T -> MouseButtonEvent#62;
    MouseManager ..> MouseButtonEvent: Creates
    MouseManager ..> MouseScrollEvent: Creates
    MouseManager --|> InputAdapter

    class Action~T~ {
        <<interface>>

        + act(deltaTime: float, extraData: T) void
    }

    class ColliderMesh {
        <<interface>>

        + getPolyhedra() Polyhedron[]
        + getBoundingBoxes() OrientedBoundingBox[]
        + getBounds() BoundingBox
        + intersects(other: ColliderMesh) boolean
        + intersects(immovable: ColliderMesh, out outMtv: Vector3) boolean
    }

    class CollisionManager {
        + isSeperatingAxis(verts1: Vector3[], verts2: Vector3[], axis: Vector3)$ boolean
        + polygonIntersects(verts1: Vector3[], edges1: Vector3[], verts2: Vector3[], edges2: Vector3[])$ boolean
        + intersects(movable: GJKTarget, immovable: GJKTarget, out outMtv: Vector3)$ boolean
    }

    class Cuboid {
        - obb: OrientedBoundingBox

        + Cuboid(obb: OrientedBoundingBox)
        + getFaceCount() int
        + getFaceVertices(faceIndex: int) Vector3[]
        + getBounds() BoundingBox
        + getNonParallelEdges(faceIndex: int) Vector3[]
    }

    class Entity {
        # transform: Matrix4
        # tint: Color
        # textureRegion: TextureRegion

        # Entity(transform: Matrix4, textureRegion: TextureRegion)
        + Entity(position: Vector3, size: Vector2, rotation: Quaternion, textureRegion: TextureRegion)
        + getPosition() Vector3
        + setPosition(position: Vector3) void
        + getSize() Vector2
        + setSize(size: Vector2) void
        + getRotation() Quaternion
        + setRotation(rotation: Quaternion) void
        + setRotation(axis: Vector3, radians: float) void
        + getTransform() Matrix4
        + getTint() Color
        + setTint(tint: Color) void
        + getTextureRegion() TextureRegion
        + setTextureRegion(textureRegion: TextureRegion) void
        + getLocalVertex(index: int) Vector3
        + getVertex(index: int) Vector3
        + getVertex(index: int, localZ: float) Vector3
        + getVertices() Vector3[]
        + translate(delta: Vector3) void
        + scale(scale: Vector2) void
        + rotate(delta: Quaternion) void
        + rotate(axis: Vector3, radians: float) void
        + transform(Matrix4 transform) void
        + render(batch: SpriteBatch, camera: Camera) void
    }

    class EntityManager {
        - entities: ArrayList~Entity~

        + EntityManager()
        + update(deltaTime: float) void
        + add(Entity: entity) void
    }

    class ButtonBindType {
        <<enumeration>>

        DOWN
        HOLD
        UP
    }

    class ButtonManager~T~ {
        - lastFrameButtons: HashSet~Integer~
        - thisFrameButtons: HashSet~Integer~
        - downBindings: HashMap~Integer&comma; ArrayList~Action~T~~~
        - holdBindings: HashMap~Integer&comma; ArrayList~Action~T~~~
        - upBindings: HashMap~Integer&comma; ArrayList~Action~T~~~

        + ButtonManager~T~()
        + ButtonManager(lastFrameButtons: HashSet~Integer~, lastFrameButtons: HashSet~Integer~)
        + getButtonDown(button: int) boolean
        + getButtonUp(button: int) boolean
        + setButtonDown(button: int) void
        + setButtonUp(button: int) void
        + bind(type: ButtonBindType, button: int, action: Action~T~) void
        + unbind(type: ButtonBindType, button: int, action: Action~T~) void
        + unbindAll(type: ButtonBindType) void
        + update(deltatime: float, timestamp: float) void
    }

    class GraphicsManager {
        # batch: SpriteBatch
        # isRendering: boolean

        + GraphicsManager()
        + renderEntity(entity: Entity) void
        + renderEntities(entities: Entity[]) void
        + endRender() void
    }

    class KeyboardManager {
        - buttonManager: ButtonManager~KeyEvent~

        + KeyboardManager()
        + keyDown(keycode: int) boolean
        + keyUp(keycode: int) boolean
        + bind(type: ButtonBindType, keycode: int, action: Action~KeyEvent~) void
        + unbind(type: ButtonBindType, keycode: int, action: Action~KeyEvent~) void
        + unbindAll(type: ButtonBindType) void
        + update(deltatime: float, timestamp: float) void
    }

    class KeyEvent {
        <<dataType>>

        + keycode: int
        + type: ButtonBindType
        + timestamp: float
        + isShiftPressed: boolean
        + isCtrlPressed: boolean
        + isAltPressed: boolean

        + KeyEvent(keycode: int, type: ButtonBindType, timestamp: float, pressedKeys: HashSet~Integer~)
    }

    class MouseButtonEvent {
        <<dataType>>

        + x: int
        + y: int
        + pointer: int
        + button: int
        + type: ButtonBindType
        + timestamp: float

        + MouseButtonEvent(x: int, y: int, pointer: int, button: int, type: ButtonBindType, timestamp: float)
    }

    class MouseManager {
        - lastFrameX: int
        - lastFrameY: int
        - thisFrameX: int
        - thisFrameY: int
        - scrolledX: float
        - scrolledY: float
        - moveBindings: ArrayList~Action~MouseMoveEvent~~
        - scrollBindings: ArrayList~Action~MouseScrollEvent~~
        - buttonManager: ButtonManager~MouseButtonEvent~

        + MouseManager()
        + mouseMoved(screenX: int, screenY: int) boolean
        + touchDown(screenX: int, screenY: int, pointer: int, button: int) boolean
        + touchUp(screenX: int, screenY: int, pointer: int, button: int) boolean
        + scrolled(amountX: float, amountY: float) boolean
        + bindButton(type: ButtonBindType, button: int, action: Action~MouseButtonEvent~) void
        + unbindButton(type: ButtonBindType, button: int, action: Action~MouseButtonEvent~) void
        + unbindAllButton(type: ButtonBindType) void
        + bindMove(action: Action~MouseMoveEvent~) void
        + unbindMove(action: Action~MouseMoveEvent~) void
        + unbindAllMove() void
        + bindScroll(action: Action~MouseScrollEvent~) void
        + unbindScroll(action: Action~MouseScrollEvent~) void
        + unbindAllScroll() void
        + update(deltaTime: float, timestamp: float) void
    }

    class MouseMoveEvent {
        <<dataType>>

        + x: int
        + y: int
        + deltaX: int
        + deltaY: int
        + timestamp: float

        + MouseMoveEvent(x: int, y: int, deltaX: int, deltaY: int, timestamp: float)
    }

    class MouseScrollEvent {
        <<dataType>>

        + scrollX: float
        + scrollY: float
        + timestamp: float

        + MouseScrollEvent(scrollX: float, scrollY: float, timestamp: float)
    }

    class Moveable {
        <<interface>>

        + translate(delta: Vector3) void
        + rotate(axis: Vector3, radians: float) void
    }

    class Polyhedron {
        <<abstract>>

        + getFaceCount()* int
        + getFaceVertices(faceIndex: int)* Vector3[]
        + getAllVertices() Iterable~Vector3~
        + getBounds() BoundingBox*
        + getNonParallelEdges(faceIndex: int) Vector3[]
        + furthestPoint(direction: Vector3, reverse: boolean) Vector3
        + intersects(other: Polyhedron) boolean
        + intersects(immovable: Polyhedron, out outMtv: Vector3) boolean
    }

    class Renderable~T~ {
        <<interface>>

        + render(renderer: T, camera: Camera) void
    }

    class ResourceCache~K&comma; V: Disposable~ {
        <<abstract>>

        - items: HashMap~K&comma; V~

        # load(key: K)* V
        + get(key: K) V
        + remove(key: K) void
        + dispose() void
    }

    class Scene {
        - camera: Camera
        - entityManager: EntityManager
        - sounds: SoundManager
        - textures: TextureManager

        + Scene()
        + load() void
        + unload() void
        + getSound(path: String) Sound
        + getTexture(path: String) Texture
        + update(deltaTime: float) void
        + render(graphics: GraphicsManager) void
    }

    class SceneManager {
        - currentScene: Scene
        - scenes: HashMap~String&comma; Scene~
        - graphics: GraphicsManager

        + addScene(name: String, scene: Scene) void
        + switchScene(name: String) void
        + getSound(path: String) Sound
        + getTexture(path: String) Texture
        + update(deltaTime: float) void
        + render() void
    }

    class SoundManager {
        # load(path: String)* Sound
    }

    class TextureManager {
        # load(path: String)* Texture
    }

    class GJKTarget {
        <<interface>>

        + furthestPoint(direction: Vector3, reverse: boolean) Vector3
    }
